css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font: normal 100%/1.5 sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

@media only screen and (min-width: 60em) {
    
    html {
        font-size:110%;
    }
    
}

@media only screen and (min-width: 90em) {
    
    html {
        font-size:120%;
    }
    
}

@media only screen and (min-width: 120em) {
    
    html {
        font-size:130%;
    }
    
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
}

img {
  display: block;
  width: 100%;
}

.header {
    margin: 0;
    padding: 0;
    text-align: center;
}

.subhead {
    text-align:center;
} 

a:focus {
    outline: 3px solid #000;
}

.skip-links {
    margin:0;
    padding:0;
    list-style-type: none;
}

.skip-links a {
    position: absolute;
    top: -3em;
    background-color: #000;
    color: #FFF;
    padding: 0.5e, 0.75em;
    font-weight: bold;
    text-align: none;
}

.skip-links a:focus {
    top: 0;
}

.intro {
   background-color: #E2E2E2;
    text-align:center;
}

.grey {
    background-color: #E2E2E2;
}

.characteristics {
    background-color: #e2e2e2;
}

.pictures {
    background-color: #efefef;
}

.masthead {
    background-color: #ccc;
    overflow: hidden;
}

.discovery {
    background-color: #e2e2e2;
}

.nav {
    list-style: none;
}

.nav li {
    margin: 0;
}

.nav a {
    display: block;
    color: #0074D9;
    text-decoration: none;
}

.button {
    text-align: center;
}

label {
    display: block;
}

input + label {
    display: inline-block;
}

input[type="text"],
input[type="number"],
input[type="email"] { 
    border: 1px solid #e2e2e2;
    border-radius: 3px;
    font-size: 1.125em;
    font-family: serif;
    background-color: white;
    padding: 0.5em;
    width: 100%;
}

form {
    max-width: 30em;
    margin: 0 auto;
}

textarea {
    width:100%;
    height: 15em;
}

.awesomeness {
    margin: 0.5em;
    padding: 0;
}

button {
    font-size: 1.25em;
    text-align: center;
    
}
@media only screen and (min-width: 25em) {

    .nav li {
        display: inline-block;
        border: 0;
    }
    
    .nav {
        text-align: center;
    }

}

@media only screen and (min-width: 38em) {
    
    .header {
        float: left;
    }
    
    .nav {
        float: left;
    }
    
    .navfooter {
        float: right;
    }
    
}

@media only screen and (min-width: 60em) {
    
    .data dt {
        float: left;
        width: 16em;
        clear: left;
    }
    
    .data dd {
        float: left;
    }
    
    .caption {
        padding-left: 1.5rem;
    }
    
    .para {
        padding-left: 1.5em;
        padding-right: 1.5em;
    }
         
}

